# Show_my_Text

./: INSTALL  README.md  installsmt.sh
resource/: meson.linux  meson.termux
resource/src/: font-model.c  font-model.h  meson.build  postinstall-linux.sh  postinstall-termux.sh  shower.c  showmytext.desktop  sushi-font-loader.c  sushi-font-loader.h  sushi-font-widget.c  sushi-font-widget.h  your-text.c
